# resume-tailor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
jd-archive/: sample-developer-platform.md
src/: __init__.py  main.py  pipeline.py  style_rules.py
src/docx/: pdf_export.py  reader.py  writer.py
src/llm/: client.py  few_shot.py  prompt_loader.py
src/llm/few_shot/: bullet_rewrite.yaml  intro_rewrite.yaml  summary_rewrite.yaml
src/llm/prompts/: holistic_rewrite.j2  jd_analyze.j2  rewrite_bullet.j2  rewrite_intro.j2  rewrite_summary.j2  substitution_plan.j2
src/models/: schemas.py
src/stages/: holistic_rewriter.py  jd_analyzer.py  resume_parser.py  rewriter.py  substitution.py  tiers.py  validator.py
src/ui/: streamlit_app.py
tests/: test_cli.py  test_docx_writer.py  test_e2e_live.py  test_few_shot.py  test_groq_client.py  test_holistic_rewriter.py  test_jd_analyzer.py  test_pdf_export.py  test_pipeline.py  test_prompt_loader.py  test_resume_parser.py  test_rewriter.py  test_scaffold.py  test_schemas.py  test_substitution_planner.py  test_tiers.py  test_validator.py
