[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-tailor"
version = "0.1.0"
description = "JD-aware resume tailoring CLI that preserves .docx formatting and prevents hallucination."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Resume Tailor" }]
dependencies = [
    "groq>=0.11.0,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "docx2pdf>=0.1.8,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "pyyaml>=6.0,<7.0",
    "typer>=0.12.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "streamlit>=1.30,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
]

[project.scripts]
resume-tailor = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.llm" = ["prompts/*.j2", "few_shot/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
